--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
   },
   "scripts": {
     "build": "npx tsc",
-    "run": "npm run build && node ./dist/main.js"
-},
+    "run": "npm run build && node ./dist/main.js",
+    "test": "jest"
+  },
   "devDependencies": {
+    "@types/jest": "^24.0.19",
     "@types/node": "^12.7.12",
+    "babel-jest": "^24.9.0",
+    "jest": "^24.9.0",
+    "mock-fs": "^4.10.1",
+    "ts-jest": "^24.1.0",
     "typescript": "^3.6.3"
   }
 }
