--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "npm run lint && npm run test && npx tsc",
     "run": "npm run build && node ./dist/main.js",
     "test": "jest",
-    "lint": "tslint -c tslint.json 'src/**/*.ts'"
+    "lint": "tslint -c tslint.json 'src/**/*.ts'",
+    "precommit": "npm run lint && npm run test"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
