Correct command for running the build for Github actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,6 @@ jobs:
     - name: pnpm install and test
       run: |
         pnpm install
-        pnpm build
+        pnpm run build
       env:
         CI: true
