--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.1",
   "description": "",
   "dependencies": {
-    "chalk": "^2.4.2"
+    "chalk": "^2.4.2",
+    "js-yaml": "^3.13.1"
   },
   "scripts": {
     "build": "npm run lint && npm run test && npx tsc",
     "run": "npm run build && node ./dist/main.js",
     "test": "jest",
+    "test:debug": "node --inspect node_modules/.bin/jest --runInBand",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "precommit": "npm run lint && npm run test"
   },
