--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "npm run lint && npm run test && npx tsc",
-    "run": "npm run build && node ./dist/main.js",
+    "start": "npm run build && node ./dist/main.js",
     "test": "jest",
     "test:debug": "node --inspect node_modules/.bin/jest --runInBand",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
