--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mock-fs": "^4.10.1",
     "ts-jest": "^24.1.0",
     "tslint": "^5.20.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.3",
+    "uuid": "^3.3.3"
   }
 }
