--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        os: [ubuntu-latest, macOS-latest]
         node-version: [8.x, 10.x, 12.x]
     steps:
     - uses: actions/checkout@v1
@@ -21,6 +21,5 @@ jobs:
       run: |
         pnpm install
         pnpm run build
-      shell: pwsh
       env:
         CI: true
