--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "dependencies": {
     "chalk": "^2.4.2",
-    "js-yaml": "^3.13.1"
+    "js-yaml": "^3.13.1",
+    "tabtab": "^3.0.2"
+  },
+  "bin": {
+    "pcs": "./dist/cli.js"
   },
   "scripts": {
     "build": "npm run lint && npm run test && npx tsc",
