--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "start": "npm run build && node ./dist/cli.js",
     "test": "jest",
     "test:debug": "node --inspect node_modules/.bin/jest --runInBand",
-    "lint": "tslint -c tslint.json 'src/**/*.ts'",
-    "precommit": "npm run lint && npm run test"
+    "lint": "tslint -c tslint.json 'src/**/*.ts'"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
