--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "tabtab": "^3.0.2"
   },
   "bin": {
-    "pcs": "./dist/cli.js"
+    "lets": "./dist/cli.js"
   },
   "scripts": {
     "build": "npm run lint && npm run test && npx tsc",
