--- a/package.json
+++ b/package.json
@@ -17,29 +17,33 @@
 	],
 	"scripts": {
 		"build": "pnpm run lint && pnpm run test && pnpm run clean && pnpx tsc",
-		"start": "pnpm run build && node ./dist/src/cli.js",
+		"start": "pnpm run build && node ./dist/cli.js",
 		"clean": "rm -rf ./dist/*",
 		"test": "jest",
 		"test:debug": "node --inspect node_modules/.bin/jest --runInBand",
-		"lint": "tslint -c tslint.json 'src/**/*.ts'",
+		"lint": "eslint -c .eslintrc.js --ext .ts 'src/**/*.ts'",
 		"prepublishOnly": "pnpm run build"
 	},
 	"dependencies": {
-		"chalk": "^2.4.2",
-		"js-yaml": "^3.13.1",
-		"jsonschema": "^1.2.4",
+		"chalk": "^4.1.0",
+		"js-yaml": "^3.14.0",
+		"jsonschema": "^1.4.0",
 		"tabtab": "^3.0.2"
 	},
 	"devDependencies": {
-		"@types/jest": "^24.0.19",
-		"@types/node": "^12.7.12",
-		"babel-jest": "^24.9.0",
-		"jest": "^24.9.0",
-		"mock-fs": "^4.10.1",
-		"ts-jest": "^24.1.0",
-		"tslint": "^5.20.0",
-		"typescript": "^3.6.3",
-		"uuid": "^3.3.3"
+		"@types/jest": "^26.0.15",
+		"@types/node": "^14.14.7",
+		"@typescript-eslint/eslint-plugin": "^4.8.0",
+		"@typescript-eslint/parser": "^4.8.0",
+		"babel-jest": "^26.6.3",
+		"eslint": "^7.13.0",
+		"eslint-plugin-jest": "^24.1.3",
+		"eslint-plugin-jsdoc": "^30.7.8",
+		"jest": "^26.6.3",
+		"mock-fs": "^4.13.0",
+		"ts-jest": "^26.4.4",
+		"typescript": "^4.0.5",
+		"uuid": "^8.3.1"
 	},
 	"publishConfig": {
 		"registry": "https://registry.npmjs.org"
