--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"tabtab": "^3.0.2"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.12.3",
 		"@types/jest": "^26.0.15",
 		"@types/node": "^14.14.7",
 		"@typescript-eslint/eslint-plugin": "^4.8.0",
